--- a/priv/static/index.html
+++ b/priv/static/index.html
@@ -11,7 +11,7 @@
 				}
 			}
 			function setupEventSource() {
-				var source = new EventSource('/bracco/events');
+				var source = new EventSource('/bracco/12/events');
 				source.addEventListener('message', function(event) {
 					addStatus("server sent the following: '" + event.data + "'");
 					}, false);
